--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -23,18 +23,38 @@
                   >Photos</a
                 >
               </li>
+
+              <% if (user) { %>
               <li>
-                <a class="<%=link='login' && 'active' %>" href="/login"
+                <a
+                  class="<%= (link === 'dashboard') ? 'active' : '' %>"
+                  href="/users/dashboard"
+                  >Dashboard</a
+                >
+              </li>
+
+              <li>
+                <a href="/logout">Logout</a>
+              </li>
+              <% } else { %>
+              <li>
+                <a
+                  class="<%= (link === 'login') ? 'active' : '' %>"
+                  href="/login"
                   >Login</a
                 >
               </li>
               <li>
-                <a class="<%=link='register' && 'active' %>" href="/register"
+                <a
+                  class="<%= (link === 'register') ? 'active' : '' %>"
+                  href="/register"
                   >Register</a
                 >
               </li>
+              <% } %>
+
               <!-- <li><a href="services.html">Services</a></li>
-              <li><a href="projects.html">Projects</a></li>
+              <li><>a href="projects.html">Projects</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li><a href="contact.html">Contact</a></li> -->
             </ul>
